syntax = "proto3";

package auth;


option go_package = "proto/auth";

service AuthController {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {};
  rpc SignIn(SignInRequest) returns (SignInResponse) {};
}

message SignUpRequest {
  string username = 1;
  string password = 2; 
}

message SignUpResponse {
  string username = 1;
  string user_id = 2;
}

message SignInRequest {
  string username = 1;
  string password = 2;  
}

message SignInResponse {
  string username = 1;
  string user_id = 2;
  Token token = 3;
}

message Token {
  string access_token = 1;
  string refresh_token = 2;
}